--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,8 @@ body {
   font-weight: 600;
   background-color: #fff4f3;
   animation: transitionIn 0.5s;
+  overflow-y: scroll;
 }
-
 body.activeb{
   overflow: hidden;
 }
@@ -342,7 +342,8 @@ a {
 .modal__title{
   font-size: var(--big-font-size);
   color: var(--title-color);
-  font-weight: 500;
+  font-weight: 700;
+  font-size: 20px;
 }
 
 .modal__description{
@@ -383,7 +384,7 @@ a {
 @media screen and (min-width: 576px){
   .modal__content{
     margin: auto;
-    width: 380px;
+    width: 550px;
     border-radius: 1.25rem;
   }
 
