--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,15 @@ a {
     transition: .5s;
     overflow-y: auto;
   }
+  
+  .nav__perfil{
+	  display: none!important;
+  }
+  
+  .nav__menu{
+	  margin-top: 150px;
+  }
+  
 }
 
 .nav__content {
@@ -491,6 +500,7 @@ button, input, textarea {
   border-radius: 1.5rem;
   backdrop-filter: blur(10px);
   cursor: pointer;
+  height: 200px;
 }
 
 .card__img{
@@ -520,10 +530,6 @@ button, input, textarea {
 
 .card__button{
   display: inline-block;
-  background: linear-gradient(130deg,
-              rgba(251,251,254,.9),
-              rgba(251,251,254,.2));
-  padding: .75rem 1.5rem;
   border-radius: .5rem;
   color: var(--title-color);
   font-weight: 500;
@@ -898,5 +904,304 @@ button, input, textarea {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+}
+
+.withdraw-page .withdraw {
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 15px 35px rgb(156 179 210 / 15%);
+    display: flex;
+    flex-wrap: wrap;
+    padding: 40px;
+    margin-bottom: 20px;
+}
+
+.withdraw-page .withdraw .block:first-child {
+    margin-right: 20px;
+    width: 200px;
+}
+
+.withdraw-page .withdraw .block .group:last-child {
+    margin-bottom: 0;
+}
+
+.withdraw-page .withdraw .block .group {
+    margin-bottom: 30px;
+}
+.withdraw-page .withdraw .block .group label {
+    color: #b6b0d7;
+    font-size: 16px;
+    margin-bottom: 10px;
+    display: block;
+    font-weight: 500;
+}
+.withdraw-page .withdraw .block .group .title {
+    font-weight: 600;
+    font-size: 20px;
+}
+.withdraw-page .withdraw .block:nth-child(2) {
+    width: calc(100% - 640px);
+}
+.withdraw-page .withdraw .block .group {
+    margin-bottom: 30px;
+}
+
+.withdraw-section{
+	padding: 0 25px;
+	margin-top: 100px;
+}
+.withdraw-page .withdraw .block .group select {
+    width: 100%;
+    padding: 15px;
+    background: #f3f3ff;
+    box-shadow: 0 4px 15px rgb(248 246 255 / 25%);
+    border-radius: 3px;
+    overflow: hidden;
+    font-size: 15px;
+    font-weight: 500;
+	cursor: pointer;
+}
+
+.withdraw-page .withdraw .block .group .input {
+    position: relative;
+    background: #f3f3ff;
+    box-shadow: 0 4px 15px rgb(248 246 255 / 25%);
+    border-radius: 3px;
+    overflow: hidden;
+}
+.withdraw-page .withdraw .block .group .input span {
+    position: absolute;
+    left: 15px;
+    top: 13.5px;
+    font-weight: 500;
+    color: #bfd1e8;
+}
+.withdraw-page .withdraw .block .group .input input {
+    width: 100%;
+    padding: 15px 20px;
+    font-size: 15px;
+    font-weight: 500;
+    background-color: transparent;
+}
+
+.withdraw-page .withdraw .block button {
+    background: linear-gradient(90deg,#f43957 -18.18%,#ff3353 49.18%,#ff627b 120%);
+    box-shadow: 0 8px 15px rgb(255 77 106 / 50%);
+	color: #fff;
+    border-radius: 3px;
+    width: 100%;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 15px 30px;
+    cursor: pointer;
+    margin: 10px auto 0;
+}
+.withdraw-page .withdraw .block:last-child {
+    margin-left: 20px;
+    display: flex;
+    width: 400px;
+}
+.withdraw-page .withdraw .block:last-child .info {
+    width: calc(100% - 37px);
+    margin-left: 20px;
+    color: #b5cbe9;
+    font-weight: 500;
+    line-height: 23px;
+}
+
+@media (max-width: 700px){
+.withdraw-page .withdraw .block:first-child {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+}
+.withdraw-page .withdraw .block:nth-child(2) {
+    width: 100%!important;
+}
+}
+@media (max-width: 1360px){
+.withdraw-page .withdraw .block:nth-child(2) {
+    width: calc(100% - 220px);
+}
+.withdraw-page .withdraw .block:last-child {
+    margin-left: 0;
+    margin-top: 20px;
+    width: 100%;
+}
+}
+.withdraw-page .withdraw-history {
+    background: #fff;
+    box-shadow: 0 25px 65px rgb(224 221 240 / 45%);
+    border-radius: 12px;
+    padding: 30px;
+    overflow-x: auto;
+}
+.withdraw-page .withdraw-history .title {
+    font-weight: 500;
+    font-size: 18px;
+    margin-bottom: 25px;
+}
+.withdraw-page .withdraw-history .table {
+    min-width: 750px;
+}
+.withdraw-page .withdraw-history .table .head {
+    background: #f8f6ff;
+    box-shadow: 0 8px 15px rgb(228 223 243 / 8%);
+    border-radius: 3px;
+    padding: 15px 30px;
+    margin-bottom: 15px;
+}
+.withdraw-page .withdraw-history .table .head span {
+    letter-spacing: .03em;
+    text-transform: uppercase;
+    color: #c3bdde;
+    font-weight: 500;
+    display: inline-block;
+    width: calc(20% - 24px);
+}
+.withdraw-page .withdraw-history .table .games {
+    display: block!important;
+	margin-bottom: 40px;
+}
+
+.withdraw-page .withdraw-history .table .games .game {
+    background: rgba(250,249,255,.6);
+    box-shadow: 0 0 35px rgb(236 233 253 / 15%);
+    border-radius: 3px;
+    padding: 15px 30px;
+    margin-bottom: 15px;
+}
+.withdraw-page .withdraw-history .table .games .game span {
+    letter-spacing: .03em;
+    text-transform: uppercase;
+    color: #c3bdde;
+    font-weight: 500;
+    display: inline-block;
+    width: calc(20% - 24px);
+}
+
+.pay-section .pay {
+    background: #ffeded;
+    border-radius: 6px;
+    display: flex;
+    margin-bottom: 20px;
+}
+.pay-section .pay .methods {
+    width: calc(100% - 450px);
+    padding: 40px;
+}
+
+.pay-section .pay .methods .title {
+    color: #000;
+    font-weight: 500;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.pay-section{
+	margin-top: 100px;
+	padding: 0 25px;
+}
+
+.pay .methods .row:last-child {
+    margin-bottom: 0;
+}
+.pay .methods .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -5px 20px;
+}
+
+.pay .methods .row .card {
+    width: 150px;
+    margin: 0 5px;
+    background-color: #fff;
+    height: 80px;
+    cursor: pointer;
+    display: flex;
+    box-shadow: 0 15px 35px rgb(156 179 210 / 15%);
+    border-radius: 6px;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.pay-page .pay .methods .row .card img {
+    width: 40px;
+    height: 40px;
+    -o-object-fit: contain;
+    object-fit: contain;
+}
+.pay-page .pay .methods .row .card.active {
+    background-color: hsla(0,0%,100%,.3);
+}
+.pay .info {
+    width: 450px;
+    background-color: #fff;
+    box-shadow: 0 15px 35px rgb(156 179 210 / 15%);
+    border-radius: 6px;
+    padding: 50px 40px;
+}
+.pay .info .group {
+    margin-bottom: 30px;
+}
+.pay .info .group label {
+    color: #b6b0d7;
+    font-size: 16px;
+    margin-bottom: 10px;
+    display: block;
+    font-weight: 500;
+}
+.pay .info .group .input {
+    position: relative;
+    background: #f3f3ff;
+    box-shadow: 0 4px 15px rgb(248 246 255 / 25%);
+    border-radius: 3px;
+    overflow: hidden;
+}
+.pay .info .group .input span {
+    position: absolute;
+    left: 15px;
+    top: 13.5px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #bfd1e8;
+}
+.pay .info .group .input input {
+    width: 100%;
+    padding: 15px 20px;
+    font-size: 18px;
+    font-weight: 500;
+    background-color: transparent;
+}
+.pay .info button {
+    background: linear-gradient(90deg,#f43957 -18.18%,#ff3353 49.18%,#ff627b 120%);
+	color: #fff;
+    border-radius: 3px;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 15px 30px;
+    display: block;
+    margin: 10px auto 0;
+    cursor: pointer;
+}
+
+@media (max-width: 1030px){
+.pay-section .pay {
+    display: block;
+}
+.pay .methods {
+    width: 100%!important;
+}
+}
+@media (max-width: 1130px){
+.pay .methods .row .card {
+    width: 100px;
+    height: 60px;
+}
+}
+@media (max-width: 1030px){
+.pay .info {
+    width: 100%;
 }
 }
